# Analysis-of-parking-lot-occupancy

./: .gitignore  AttentionWalk_embeddings.ipynb  CMakeLists.txt  Parking Lot Analysis.pdf:Zone.Identifier  README.md  Report_Esmaeili_nasab_Volpato.pdf:Zone.Identifier  angles.csv
include/: BboxSorter.h  CarSegmenter.h  Evaluator.h  GroundTruthReader.h  Loader.h  ParkingSpaceClassifier.h  ParkingSpaceDetector.h  Visualizer.h
src/: BboxSorter.cpp  CarSegmenter.cpp  Evaluator.cpp  GroundTruthReader.cpp  Loader.cpp  ParkingSpaceClassifier.cpp  ParkingSpaceDetector.cpp  Visualizer.cpp  main.cpp  prova.cpp
